// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Libraries.sol - {"bracketSpacing":true} format 1`] = `
====================================options=====================================
bracketSpacing: true
parsers: ["slang"]
                                                      printWidth: 80 (default) |
=====================================input======================================
  using   Lib    for uint;
using Lib for
    uint global;
using { f} for uint;
using {f } for uint global;
using {f as +} for uint global;
using { a, very,     long, and, complex,     Function, list, with, long, names }     for
    uint;
using { a, very,
        long, and, complex, Function,
        list, with, long, names }       for uint global;

=====================================output=====================================
using Lib for uint;
using Lib for uint global;
using { f } for uint;
using { f } for uint global;
using { f as + } for uint global;
using {
    a,
    very,
    long,
    and,
    complex,
    Function,
    list,
    with,
    long,
    names
} for uint;
using {
    a,
    very,
    long,
    and,
    complex,
    Function,
    list,
    with,
    long,
    names
} for uint global;

================================================================================
`;

exports[`Libraries.sol - {"bracketSpacing":true} locations 1`] = `
SourceUnit 0-350
  SourceUnitMembers 0-350
    UsingDirective 2-26
      IdentifierPath 10-13
        Identifier 10-13
      UintKeyword 21-25
    UsingDirective 27-57
      IdentifierPath 33-36
        Identifier 33-36
      UintKeyword 45-49
    UsingDirective 58-78
      UsingDeconstruction 64-68
        UsingDeconstructionSymbols 65-67
          UsingDeconstructionSymbol 66-67
            IdentifierPath 66-67
              Identifier 66-67
      UintKeyword 73-77
    UsingDirective 79-106
      UsingDeconstruction 85-89
        UsingDeconstructionSymbols 86-87
          UsingDeconstructionSymbol 86-87
            IdentifierPath 86-87
              Identifier 86-87
      UintKeyword 94-98
    UsingDirective 107-138
      UsingDeconstruction 113-121
        UsingDeconstructionSymbols 114-120
          UsingDeconstructionSymbol 114-120
            IdentifierPath 114-115
              Identifier 114-115
            UsingAlias 116-120
              UsingOperator 119-120
      UintKeyword 126-130
    UsingDirective 139-237
      UsingDeconstruction 145-219
        UsingDeconstructionSymbols 146-217
          UsingDeconstructionSymbol 147-148
            IdentifierPath 147-148
              Identifier 147-148
          UsingDeconstructionSymbol 150-154
            IdentifierPath 150-154
              Identifier 150-154
          UsingDeconstructionSymbol 160-164
            IdentifierPath 160-164
              Identifier 160-164
          UsingDeconstructionSymbol 166-169
            IdentifierPath 166-169
              Identifier 166-169
          UsingDeconstructionSymbol 171-178
            IdentifierPath 171-178
              Identifier 171-178
          UsingDeconstructionSymbol 184-192
            IdentifierPath 184-192
              Identifier 184-192
          UsingDeconstructionSymbol 194-198
            IdentifierPath 194-198
              Identifier 194-198
          UsingDeconstructionSymbol 200-204
            IdentifierPath 200-204
              Identifier 200-204
          UsingDeconstructionSymbol 206-210
            IdentifierPath 206-210
              Identifier 206-210
          UsingDeconstructionSymbol 212-217
            IdentifierPath 212-217
              Identifier 212-217
      UintKeyword 232-236
    UsingDirective 238-349
      UsingDeconstruction 244-326
        UsingDeconstructionSymbols 245-324
          UsingDeconstructionSymbol 246-247
            IdentifierPath 246-247
              Identifier 246-247
          UsingDeconstructionSymbol 249-253
            IdentifierPath 249-253
              Identifier 249-253
          UsingDeconstructionSymbol 263-267
            IdentifierPath 263-267
              Identifier 263-267
          UsingDeconstructionSymbol 269-272
            IdentifierPath 269-272
              Identifier 269-272
          UsingDeconstructionSymbol 274-281
            IdentifierPath 274-281
              Identifier 274-281
          UsingDeconstructionSymbol 283-291
            IdentifierPath 283-291
              Identifier 283-291
          UsingDeconstructionSymbol 301-305
            IdentifierPath 301-305
              Identifier 301-305
          UsingDeconstructionSymbol 307-311
            IdentifierPath 307-311
              Identifier 307-311
          UsingDeconstructionSymbol 313-317
            IdentifierPath 313-317
              Identifier 313-317
          UsingDeconstructionSymbol 319-324
            IdentifierPath 319-324
              Identifier 319-324
      UintKeyword 337-341
`;

exports[`Libraries.sol format 1`] = `
====================================options=====================================
parsers: ["slang"]
                                                      printWidth: 80 (default) |
=====================================input======================================
  using   Lib    for uint;
using Lib for
    uint global;
using { f} for uint;
using {f } for uint global;
using {f as +} for uint global;
using { a, very,     long, and, complex,     Function, list, with, long, names }     for
    uint;
using { a, very,
        long, and, complex, Function,
        list, with, long, names }       for uint global;

=====================================output=====================================
using Lib for uint;
using Lib for uint global;
using {f} for uint;
using {f} for uint global;
using {f as +} for uint global;
using {a, very, long, and, complex, Function, list, with, long, names} for uint;
using {
    a,
    very,
    long,
    and,
    complex,
    Function,
    list,
    with,
    long,
    names
} for uint global;

================================================================================
`;

exports[`Libraries.sol locations 1`] = `
SourceUnit 0-350
  SourceUnitMembers 0-350
    UsingDirective 2-26
      IdentifierPath 10-13
        Identifier 10-13
      UintKeyword 21-25
    UsingDirective 27-57
      IdentifierPath 33-36
        Identifier 33-36
      UintKeyword 45-49
    UsingDirective 58-78
      UsingDeconstruction 64-68
        UsingDeconstructionSymbols 65-67
          UsingDeconstructionSymbol 66-67
            IdentifierPath 66-67
              Identifier 66-67
      UintKeyword 73-77
    UsingDirective 79-106
      UsingDeconstruction 85-89
        UsingDeconstructionSymbols 86-87
          UsingDeconstructionSymbol 86-87
            IdentifierPath 86-87
              Identifier 86-87
      UintKeyword 94-98
    UsingDirective 107-138
      UsingDeconstruction 113-121
        UsingDeconstructionSymbols 114-120
          UsingDeconstructionSymbol 114-120
            IdentifierPath 114-115
              Identifier 114-115
            UsingAlias 116-120
              UsingOperator 119-120
      UintKeyword 126-130
    UsingDirective 139-237
      UsingDeconstruction 145-219
        UsingDeconstructionSymbols 146-217
          UsingDeconstructionSymbol 147-148
            IdentifierPath 147-148
              Identifier 147-148
          UsingDeconstructionSymbol 150-154
            IdentifierPath 150-154
              Identifier 150-154
          UsingDeconstructionSymbol 160-164
            IdentifierPath 160-164
              Identifier 160-164
          UsingDeconstructionSymbol 166-169
            IdentifierPath 166-169
              Identifier 166-169
          UsingDeconstructionSymbol 171-178
            IdentifierPath 171-178
              Identifier 171-178
          UsingDeconstructionSymbol 184-192
            IdentifierPath 184-192
              Identifier 184-192
          UsingDeconstructionSymbol 194-198
            IdentifierPath 194-198
              Identifier 194-198
          UsingDeconstructionSymbol 200-204
            IdentifierPath 200-204
              Identifier 200-204
          UsingDeconstructionSymbol 206-210
            IdentifierPath 206-210
              Identifier 206-210
          UsingDeconstructionSymbol 212-217
            IdentifierPath 212-217
              Identifier 212-217
      UintKeyword 232-236
    UsingDirective 238-349
      UsingDeconstruction 244-326
        UsingDeconstructionSymbols 245-324
          UsingDeconstructionSymbol 246-247
            IdentifierPath 246-247
              Identifier 246-247
          UsingDeconstructionSymbol 249-253
            IdentifierPath 249-253
              Identifier 249-253
          UsingDeconstructionSymbol 263-267
            IdentifierPath 263-267
              Identifier 263-267
          UsingDeconstructionSymbol 269-272
            IdentifierPath 269-272
              Identifier 269-272
          UsingDeconstructionSymbol 274-281
            IdentifierPath 274-281
              Identifier 274-281
          UsingDeconstructionSymbol 283-291
            IdentifierPath 283-291
              Identifier 283-291
          UsingDeconstructionSymbol 301-305
            IdentifierPath 301-305
              Identifier 301-305
          UsingDeconstructionSymbol 307-311
            IdentifierPath 307-311
              Identifier 307-311
          UsingDeconstructionSymbol 313-317
            IdentifierPath 313-317
              Identifier 313-317
          UsingDeconstructionSymbol 319-324
            IdentifierPath 319-324
              Identifier 319-324
      UintKeyword 337-341
`;
